--- a/src/Style/Component.scss
+++ b/src/Style/Component.scss
@@ -445,7 +445,7 @@
         will-change: transform;
 
         &.active {
-          img {
+          .carousel-item-content img {
             filter: brightness(0.8) contrast(1.2);
           }
         }
@@ -465,9 +465,10 @@
             height: 100%;
             object-fit: cover;
             will-change: transform;
+            filter: brightness(0.6) contrast(1.3);
 
             &.current-showcase {
-              filter: brightness(1.0) contrast(1.2);
+              filter: brightness(1) contrast(1.2) grayscale(0.8);
             }
           }
 
@@ -476,8 +477,8 @@
             position: absolute;
             top: 12px;
             right: 12px;
-            width: 24px;
-            height: 24px;
+            width: 32px;
+            height: 32px;
             background: rgba(241, 204, 186, 0.9);
             border-radius: 50%;
             display: flex;
@@ -488,8 +489,8 @@
             animation: pulse 2s infinite;
 
             svg {
-              width: 16px;
-              height: 16px;
+              width: 24px;
+              height: 24px;
             }
           }
 
@@ -530,15 +531,12 @@
       @keyframes pulse {
         0% {
           transform: scale(1);
-          opacity: 1;
         }
         50% {
           transform: scale(1.1);
-          opacity: 0.7;
         }
         100% {
           transform: scale(1);
-          opacity: 1;
         }
       }
       // }
