--- a/src/Style/Home.scss
+++ b/src/Style/Home.scss
@@ -456,6 +456,29 @@
   }
 }
 
+// Leva Controls Styling
+.leva-root {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1001;
+  width: 300px;
+  height: 100%;
+  pointer-events: none;
+  
+  // Center align button text
+  button {
+    text-align: center;
+    justify-content: center;
+  }
+  
+  // Ensure the panel is centered
+  .leva-panel {
+    margin: 0 auto;
+  }
+}
+
 @-webkit-keyframes fadeIn {
   from {
     opacity: 0;
