--- a/src/Style/Component.scss
+++ b/src/Style/Component.scss
@@ -427,7 +427,7 @@
       font-size: 1.5rem;
       cursor: pointer;
       z-index: 10;
-      transition: all 0.3s ease;
+      transition: transform 0.3s ease;
       will-change: transform, opacity;
       transform: translateZ(0);
       backface-visibility: hidden;
